# generative_ai

./: README.md  make.bat  pyproject.toml
course_llm_engineering/: utils.py
course_llm_engineering/week1/: brochure_out_of_website.py  query_ollama_model.py  summarize_website.py  summary.md
